--- a/images/chan-hoi-coco/config.ini
+++ b/images/chan-hoi-coco/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-coco.html
 lastopen = 2024-06-09 23:18:33
 
 [search]
-lastsearch = 2024-07-22 17:36:46
+lastsearch = 2024-07-22 18:17:41
 
 [hk.linkedin.com]
 match = -123.1%%
@@ -42,13 +42,13 @@ title = I Am an HKUer - Hong Kong
 url = https://admissions.hku.hk/hkuer
 
 [www.alamy.com]
-match = -200.0%%
-title = Hong Kong-born Canadian actress Grace Chan ...
+match = -246.2%%
+title = Hong Kong-born Canadian actress Grace Chan Hoi Lam ...
 url = https://www.alamy.com/hong-kong-born-canadian-actress-grace-chan-hoi-lam-attends-a-v-city-event-in-hong-kong-china-24-december-2018-image261767432.html
 
 [www.tripadvisor.com]
-match = -192.3%%
-title = Coco Viet Homestay - Hoi An Hotels - Tripadvisor
+match = -200.0%%
+title = Hoi An Hotel Prices & Reviews - Coco Viet Homestay
 url = https://www.tripadvisor.com/Hotel_Review-g298082-d19797871-Reviews-Coco_Viet_Homestay-Hoi_An_Quang_Nam_Province.html
 
 [jovelchan.com]
