--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-07-22 15:51:43
+lastsearch = 2024-07-22 18:17:10
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -27,9 +27,9 @@ title = Tìm Hiểu Kích Thước Giường Ngủ Các Loại
 url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 
 [ru9.vn]
-match = -86.4%%
-title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
+match = -81.8%%
+title = Đệm giường đơn giá tốt, bảng giá các loại ... - Ru9
+url = https://ru9.vn/blogs/magazine/dem-giuong-don
 
 [cafeland.vn]
 match = -45.5%%
