--- a/images/ga-chun-thang-loi-180x200/config.ini
+++ b/images/ga-chun-thang-loi-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-chun-thang-loi-180x200.html
 lastopen = 2024-06-06 16:41:04
 
 [search]
-lastsearch = 2024-07-22 15:41:49
+lastsearch = 2024-07-22 18:24:58
 
 [maythangloi.com.vn]
 match = -77.8%%
@@ -12,9 +12,9 @@ title = Thắng Lợi
 url = https://maythangloi.com.vn/
 
 [nemxinh.net]
-match = -110.0%%
-title = Bộ ga chun
-url = http://nemxinh.net/bo-ga-chun-cp208.html
+match = -77.8%%
+title = Thắng Lợi
+url = http://nemxinh.net/thuong-hieu/thang-loi
 
 [shopee.vn]
 match = -84.0%%
@@ -22,8 +22,8 @@ title = chăn ga thắng lợi giá tốt Tháng 7, 2024 Chăn, Ga, Gối & ...
 url = https://shopee.vn/search?category=11036670&keyword=chăn ga thắng lợi&page=0&subcategory=11036683
 
 [congtynemthangloi.com]
-match = -52.0%%
-title = Review TOP ga giường Thắng Lợi được yêu thích nhất ...
+match = -72.0%%
+title = Review TOP ga giường Thắng Lợi được yêu thích nhất hiện nay
 url = https://congtynemthangloi.com/review-ga-giuong-thang-loi
 
 [nemtotgiare.com]
@@ -32,9 +32,9 @@ title = Bộ drap mền Thắng Lợi cotton cao cấp giá chỉ 700k
 url = https://nemtotgiare.com/san-pham/bo-drap-cotton-thang-loi-90.html
 
 [tiki.vn]
-match = -44.0%%
-title = Ga trải giường thắng lợi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=ga trải giường thắng lợi
+match = -64.0%%
+title = Bộ chăn ra gối nệm thắng lợi hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=bộ chăn ra gối nệm thắng lợi
 
 [nemhana.com]
 match = -40.0%%
@@ -95,4 +95,9 @@ url = https://nemthangloi.org/san-pham/ga-chun-trai-giuong-thang-loi-silk-cotton
 match = -4.0%%
 title = Tìm hiểu về drap giường Thắng Lợi
 url = https://vuanem.com/blog/drap-giuong-thang-loi.html
+
+[demgiare.net]
+match = 40.0%%
+title = Nệm Cao Su Non Thắng Lợi 1m8 x 2m
+url = https://demgiare.net/nem-cao-su-non-thang-loi-1m8-x-2m.html
 
