--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-22 23:36:11
+lastsearch = 2024-07-23 00:35:16
 
 [batdongsan.com.vn]
 match = -240.0%%
@@ -22,9 +22,9 @@ title = Danh Sách Các Sân Cầu Lông Ở Bình Thạnh Mới Nhất
 url = https://shopvnb.com/danh-sach-cac-san-cau-long-o-binh-thanh-moi-nhat.html
 
 [m.facebook.com]
-match = -60.0%%
-title = TOUS les JOURS HCM tuyen dung
-url = https://m.facebook.com/story.php/?story_fbid=780576764071416&id=100063572980703
+match = -213.3%%
+title = Thích Ăn Uống Rạch Giá | Cá mú về đủ size rồi nha 1, ...
+url = https://m.facebook.com/groups/thichanuongrg/posts/3821970811457312/
 
 [thaivietgroup.com]
 match = -20.0%%
