--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-22 20:33:17
+lastsearch = 2024-07-23 00:31:31
 
 [shopee.vn]
 match = 25.0%%
@@ -52,9 +52,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [m.facebook.com]
-match = 22.2%%
-title = Chieu Lac
-url = https://m.facebook.com/chieu.lac.73/
+match = -200.0%%
+title = Tôi Là Dân Quận 12 | DỌn kho còn ít chiếu điều hoà cao ...
+url = https://m.facebook.com/groups/477065866263029/posts/1556478708321734/
 
 [baolongan.vn]
 match = -125.0%%
@@ -67,9 +67,9 @@ title = Kỹ Thuật Trồng Lạc (Đậu Phộng) Vụ Xuân
 url = https://sonnptnt.thaibinh.gov.vn/tin-tuc-su-kien/tu-sach-nha-nong/ky-thuat-trong-lac-dau-phong-vu-xuan.html
 
 [www.youtube.com]
-match = -162.5%%
-title = VÌ SAO Ả-RẬP KHÔNG VUNG TIỀN MUA CẦU THỦ NHIỀU ...
-url = https://www.youtube.com/watch?v=LtEmGn_miPo
+match = -187.5%%
+title = 12 Động Tác Xoa Mặt - Diện Chẩn Bùi Quốc Châu | G.V ...
+url = https://www.youtube.com/watch?v=1qymgQonDEU
 
 [vuihoc.vn]
 match = -187.5%%
