--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-07-22 18:15:09
+lastsearch = 2024-07-23 00:34:33
 
 [thegioidemviet.vn]
-match = 35.7%%
-title = Bảng Giá Chiếu Trúc Quế Lâm [Chính hãng
-url = https://thegioidemviet.vn/chieu-truc-que-lam/
+match = 21.4%%
+title = BẢNG GIÁ Chiếu Trúc Việt Nam mới nhất ...
+url = https://thegioidemviet.vn/chieu-truc/
 
 [shopee.vn]
 match = -3.6%%
@@ -17,9 +17,9 @@ title = Chiếu trúc Quế Lâm mắt ngọc hạt vàng bóng đẹp loại 1
 url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-mắt-ngọc-hạt-vàng-bóng-đẹp-loại-1-i.121274905.7879754206
 
 [chieutrelanlan.com]
-match = 10.7%%
-title = Chiếu trúc Quế Lâm không viền màu trắng 160x200cm
-url = https://chieutrelanlan.com/chieu-truc-que-lam-khong-vien-mau-trang-160x200cm-72.html
+match = 25.0%%
+title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
+url = https://chieutrelanlan.com/chieu-truc-p17.html
 
 [demxanh.com]
 match = -28.6%%
@@ -37,9 +37,9 @@ title = Mua Chiếu trúc Quế Lâm - hàng chuẩn loại 1
 url = https://tiki.vn/chieu-truc-que-lam-hang-chuan-loai-1-p87382996.html
 
 [www.sendo.vn]
-match = -17.9%%
-title = Chiếu Trúc Hạt Quế Lâm kích thước 1m8x2m [Được kiểm ...
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-kich-thuoc-1m8x2m-duo-c-kie-m-ha-ng-18050982-117148935.html?source_block_id=feed&source_page_id=search&source_info=pwa_60_1721088000325_undefined_-1_cateLvl2_0_56_23_-1
+match = -3.6%%
+title = Chiếu Trúc Hạt Loại Một Giá Cực Rẻ Nên Mua Ở Đâu
+url = https://www.sendo.vn/chieu-truc-hat.htm
 
 [www.lazada.vn]
 match = 3.6%%
