--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-07-22 23:37:28
+lastsearch = 2024-07-23 00:30:16
 
 [www.gov.uk]
 match = -200.0%%
@@ -852,9 +852,9 @@ title =
 url = https://football-ranking.com/rankByConfederation?zone=AFC&period=
 
 [www.coe.edu]
-match = 0.0%%
-title = 
-url = https://www.coe.edu/why-coe
+match = -233.3%%
+title = Coe College: One of the Best Small Colleges in the Country
+url = https://www.coe.edu/
 
 [www.endocrine.org]
 match = -73.3%%
@@ -970,4 +970,14 @@ url = https://play.google.com/store/apps/details?id=co.brainly&hl=en_US
 match = 0.0%%
 title = 
 url = https://www.justice.gov/interpol-washington/frequently-asked-questions
+
+[www.unco.edu]
+match = -100.0%%
+title = University of Northern Colorado: Home
+url = https://www.unco.edu/
+
+[www.ftc.gov]
+match = -166.7%%
+title = Complying with COPPA: Frequently Asked Questions
+url = https://www.ftc.gov/business-guidance/resources/complying-coppa-frequently-asked-questions
 
