--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-23 04:30:28
+lastsearch = 2024-07-23 05:37:41
 
 [www.instagram.com]
-match = -123.1%%
-title = Chan Dior Sunshade (@chan_dior_sunshade)
-url = https://www.instagram.com/chan_dior_sunshade/
+match = -161.5%%
+title = (@katrinacyt) • Instagram photos and videos
+url = https://www.instagram.com/katrinacyt/
 
 [hk.linkedin.com]
 match = -100.0%%
@@ -152,8 +152,8 @@ title = Get To Know The 15 Biggest Art Collectors In Hong Kong
 url = https://www.tatlerasia.com/lifestyle/arts/hk-get-to-know-the-15-biggest-art-collectors-in-hong-kong
 
 [www.dailymail.co.uk]
-match = -284.6%%
-title = Ex showbiz reporter becomes the richest woman in Hong ...
+match = -230.8%%
+title = Ex showbiz reporter becomes the richest woman ...
 url = https://www.dailymail.co.uk/news/article-4275540/Ex-showbiz-reporter-richest-woman-Hong-Kong.html
 
 [m.facebook.com]
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -261.5%%
-title = South Korea: First lady's Dior bag shakes country's ...
+match = -230.8%%
+title = South Korea: First lady's Dior bag shakes ... - BBC
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
