--- a/images/chieu-lac-d2-15/config.ini
+++ b/images/chieu-lac-d2-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-15.html
 lastopen = 2024-06-21 06:43:45
 
 [search]
-lastsearch = 2024-07-23 00:51:21
+lastsearch = 2024-07-23 05:42:13
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -97,9 +97,9 @@ title = D2 - Phát Triển Người Lãnh Đạo - Mục Sư Brian Houston
 url = https://quangharvest.com/isom-khoa-cap-4/d2-phat-trien-nguoi-lanh-dao-developing-leaders
 
 [www.youtube.com]
-match = -153.3%%
-title = WATCHPARTY PRIMMIE DEBUT TALON - Team SECRET ...
-url = https://www.youtube.com/watch?v=SMM6hm09jvw
+match = -213.3%%
+title = Tấp Nập Phố ĂN UỐNG từ Thanh Đa về Đường D2 (Nguyễn ...
+url = https://www.youtube.com/watch?v=JfpM2gS-NKI
 
 [rentapartment.vn]
 match = -153.3%%
