--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-07-22 23:15:38
+lastsearch = 2024-07-23 05:41:49
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -217.6%%
-title = The new army list, by H.G. Hart [afterw.] Hart's army list. ...
-url = https://books.google.com/books?id=8-8NAAAAQAAJ&pg=RA1-PA596&lpg=RA1-PA596&dq=man+in+hoa+dep+16&source=bl&ots=2ilmUAw40M&sig=ACfU3U207EZfmam4IbgW4adFjTy6Rmaahg&hl=en&sa=X&ved=2ahUKEwjU4-DYhbuHAxVkIzQIHYOQBPAQ6AF6BAgcEAM
+match = -194.1%%
+title = Bradshaw's General Railway and Steam Navigation Guide for ...
+url = https://books.google.com/books?id=6R8pAAAAYAAJ&pg=PA131&lpg=PA131&dq=man+in+hoa+dep+16&source=bl&ots=rUQ5CwHy16&sig=ACfU3U0JTvl-HBIuy1Zar2XtSRh9QaGZNQ&hl=en&sa=X&ved=2ahUKEwjw6sKB3LuHAxWgLUQIHeDiA0gQ6AF6BAgaEAM
 
 [tax.vermont.gov]
 match = -29.4%%
