--- a/images/nem-caosu-thang-loi-160x200x10/config.ini
+++ b/images/nem-caosu-thang-loi-160x200x10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-thang-loi-160x200x10.html
 lastopen = 2024-06-07 01:42:38
 
 [search]
-lastsearch = 2024-07-23 01:51:01
+lastsearch = 2024-07-23 05:36:11
 
 [congtynemthangloi.com]
 match = -46.7%%
@@ -12,9 +12,9 @@ title = Top 7 loại nệm cao su thiên nhiên Thắng Lợi và bảng giá ch
 url = https://congtynemthangloi.com/nem-cao-su-thien-nhien-thang-loi-va-bang-gia-chi-tiet
 
 [khonemgiatot.vn]
-match = 36.7%%
-title = NỆM CAO SU HOẠT TÍNH THẮNG LỢI
-url = https://khonemgiatot.vn/nem-cao-su-hoat-tinh-thang-loi
+match = 33.3%%
+title = NỆM CAO SU NON THẮNG LỢI
+url = https://khonemgiatot.vn/nem-thang-loi-chinh-hang-100
 
 [nemcaosuthangloi.vn]
 match = 36.7%%
