--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-23 00:49:03
+lastsearch = 2024-07-23 05:35:18
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -17,9 +17,9 @@ title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
 url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
 
 [www.ebay.com]
-match = -100.0%%
-title = Everhome 700 TC 100%% Egyptian Cotton Deep Fitted ...
-url = https://www.ebay.com/itm/256326842231
+match = -128.6%%
+title = Everhome 700 TC 100%% Egyptian Cotton Extra Deep Fitted ...
+url = https://www.ebay.com/itm/256190021356
 
 [www.quora.com]
 match = -123.8%%
@@ -37,9 +37,9 @@ title = [New] Bảng Giá nệm cao su Kim Cương - Sale Tháng 3, 4 ...
 url = https://thegioidemviet.vn/dem-cao-su-kim-cuong/
 
 [www.diepxuan.com]
-match = -61.9%%
-title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome.html
+match = 23.8%%
+title = Nệm everhome TC 15F 16 20 - Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [bachhoadem.vn]
 match = 28.6%%
