--- a/images/tam-trai-ks-uc-220-250/config.ini
+++ b/images/tam-trai-ks-uc-220-250/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trai-ks-uc-220-250.html
 lastopen = 2024-06-07 01:32:07
 
 [search]
-lastsearch = 2024-07-23 04:31:02
+lastsearch = 2024-07-23 05:40:36
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -102,9 +102,9 @@ title =
 url = https://www.dol.gov/agencies/ofccp/debarred-list
 
 [en.wikipedia.org]
-match = -17.6%%
-title = Soviet–Afghan War
-url = https://en.wikipedia.org/wiki/Soviet–Afghan_War
+match = 0.0%%
+title = 
+url = https://en.wikipedia.org/wiki/Debarment
 
 [www.johnknoop.com]
 match = 5.6%%
